[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Fireball.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fireball/FB001.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fireball/FB002.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fireball/FB003.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fireball/FB005.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fireball/FB004.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "flying",
"speed": 10.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "buildup"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.5, 8.625 )

[node name="Fireball" type="Area2D" groups=[
"Projectile",
]]
collision_layer = 133
collision_mask = 133
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -7.5, 0 )
frames = SubResource( 1 )
animation = "flying"
frame = 3
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/buildup = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -10, 0 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.75 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="ResetTimer" type="Timer" parent="."]

[node name="BuildupTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Fireball_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
[connection signal="timeout" from="BuildupTimer" to="." method="_on_BuildupTimer_timeout"]
